tests/parser/syntax-errors/indentation/expected_indent_func_def_vars.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo():
    a : int = 0

pass

# CHECK:      SyntaxError (line 6, column 1): expected at least one indented statement in function.
# CHECK-NEXT: >>>pass
# CHECK-NEXT: >>>^
